// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders correctly with ariaLabelDescription 1`] = `
<a
  aria-label="arialabel link"
  aria-labelledby=""
  className="mondayStyleLink monday-style-link"
  data-testid="link"
  href=""
  id=""
  onClick={[Function]}
  rel="noreferrer"
  target="_blank"
>
  <span
    className="mondayStyleLinkText monday-style-link--text"
  >
    
  </span>
</a>
`;

exports[`Link renders correctly with ariaLabeledBy 1`] = `
<a
  aria-label=""
  aria-labelledby="aria label link"
  className="mondayStyleLink monday-style-link"
  data-testid="link"
  href=""
  id=""
  onClick={[Function]}
  rel="noreferrer"
  target="_blank"
>
  <span
    className="mondayStyleLinkText monday-style-link--text"
  >
    
  </span>
</a>
`;

exports[`Link renders correctly with className 1`] = `
<a
  aria-label=""
  aria-labelledby=""
  className="mondayStyleLink monday-style-link testClassName"
  data-testid="link"
  href=""
  id=""
  onClick={[Function]}
  rel="noreferrer"
  target="_blank"
>
  <span
    className="mondayStyleLinkText monday-style-link--text"
  >
    
  </span>
</a>
`;

exports[`Link renders correctly with icon 1`] = `
<a
  aria-label=""
  aria-labelledby=""
  className="mondayStyleLink monday-style-link"
  data-testid="link"
  href=""
  id=""
  onClick={[Function]}
  rel="noreferrer"
  target="_blank"
>
  <span
    aria-hidden={true}
    className="iconComponent icon_component mondayStyleLinkIconStart monday-style-link--icon-start fa fa fa-star"
    data-testid="icon"
    onClick={[Function]}
    role="img"
  />
  <span
    className="mondayStyleLinkText monday-style-link--text"
  >
    
  </span>
</a>
`;

exports[`Link renders correctly with id 1`] = `
<a
  aria-label=""
  aria-labelledby=""
  className="mondayStyleLink monday-style-link"
  data-testid="link_TestId"
  href=""
  id="TestId"
  onClick={[Function]}
  rel="noreferrer"
  target="_blank"
>
  <span
    className="mondayStyleLinkText monday-style-link--text"
  >
    
  </span>
</a>
`;

exports[`Link renders correctly with right icon 1`] = `
<a
  aria-label=""
  aria-labelledby=""
  className="mondayStyleLink monday-style-link"
  data-testid="link"
  href=""
  id=""
  onClick={[Function]}
  rel="noreferrer"
  target="_blank"
>
  <span
    className="mondayStyleLinkText monday-style-link--text"
  >
    
  </span>
  <span
    aria-hidden={true}
    className="iconComponent icon_component mondayStyleLinkIconEnd monday-style-link--icon-end fa fa fa-star"
    data-testid="icon"
    onClick={[Function]}
    role="img"
  />
</a>
`;

exports[`Link renders correctly with text 1`] = `
<a
  aria-label=""
  aria-labelledby=""
  className="mondayStyleLink monday-style-link"
  data-testid="link"
  href=""
  id=""
  onClick={[Function]}
  rel="noreferrer"
  target="_blank"
>
  <span
    className="mondayStyleLinkText monday-style-link--text"
  >
    Link
  </span>
</a>
`;
